[gd_scene load_steps=11 format=3 uid="uid://4yp3dbhux2i3"]

[ext_resource type="Script" uid="uid://4r0k5vruevp6" path="res://Scenes/Main/parts/OS/Apps/StoreApp/parts/store_resource_item.gd" id="1_8eqjv"]
[ext_resource type="StyleBox" uid="uid://dr0kq08kg1hre" path="res://Styles/BlackPanel.tres" id="1_puplg"]
[ext_resource type="PackedScene" uid="uid://c7n7pxhkwpt0k" path="res://UI/SvgIcon/SVGIcon.tscn" id="2_8eqjv"]
[ext_resource type="LabelSettings" uid="uid://ej7wdjd75hyn" path="res://Fonts/font_2_16_white.tres" id="3_1p7yx"]
[ext_resource type="StyleBox" uid="uid://deoct5txhbuc8" path="res://Styles/OrangePanel.tres" id="5_puplg"]
[ext_resource type="LabelSettings" uid="uid://c6jfb8gq36fsd" path="res://Fonts/font_1_black_inverse.tres" id="6_1p7yx"]
[ext_resource type="PackedScene" uid="uid://b641lti6qidew" path="res://UI/EconItem/EconItem.tscn" id="7_idvsx"]
[ext_resource type="PackedScene" uid="uid://cv1ha0twon7kt" path="res://UI/WindowUI/Header/parts/DiffTag.tscn" id="8_iuvjp"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_7y7cd"]
thickness = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7y7cd"]

[node name="StoreResourceItem" type="PanelContainer"]
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_puplg")
script = ExtResource("1_8eqjv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 1
label_settings = ExtResource("3_1p7yx")
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_7y7cd")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MoneyIcon" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_8eqjv")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = 31
icon_color = Color(1, 1, 1, 1)
icon_size = Vector2(40, 40)

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7y7cd")

[node name="MoneyBurnLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer"]
modulate = Color(1, 1, 1, 0.141176)
layout_mode = 2
text = "000"
label_settings = ExtResource("3_1p7yx")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MoneyLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 1
text = "0"
label_settings = ExtResource("3_1p7yx")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScienceIcon" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("2_8eqjv")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = 44
icon_color = Color(1, 1, 1, 1)
icon_size = Vector2(40, 40)

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7y7cd")

[node name="ScienceBurnLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer"]
modulate = Color(1, 1, 1, 0.141176)
layout_mode = 2
text = "000"
label_settings = ExtResource("3_1p7yx")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScienceLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 1
text = "0"
label_settings = ExtResource("3_1p7yx")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MaterialIcon" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("2_8eqjv")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = 40
icon_color = Color(1, 1, 1, 1)
icon_size = Vector2(40, 40)

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7y7cd")

[node name="MaterialBurnLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/PanelContainer"]
modulate = Color(1, 1, 1, 0.141176)
layout_mode = 2
text = "000"
label_settings = ExtResource("3_1p7yx")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MaterialLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3/PanelContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 1
text = "0"
label_settings = ExtResource("3_1p7yx")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CoreIcon" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4" instance=ExtResource("2_8eqjv")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = 39
icon_color = Color(1, 1, 1, 1)
icon_size = Vector2(40, 40)

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7y7cd")

[node name="CoreBurnLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4/PanelContainer"]
modulate = Color(1, 1, 1, 0.141176)
layout_mode = 2
text = "000"
label_settings = ExtResource("3_1p7yx")
horizontal_alignment = 2
vertical_alignment = 1

[node name="CoreLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer4/PanelContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 1
text = "0"
label_settings = ExtResource("3_1p7yx")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Currencies" type="PanelContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = ExtResource("5_puplg")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = -10
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "ECONOMY"
label_settings = ExtResource("6_1p7yx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Money" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("7_idvsx")]
layout_mode = 2
icon = 31
amount = 123
burn_val = "0000"

[node name="Research" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("7_idvsx")]
layout_mode = 2
icon = 44
amount = 123
burn_val = "0000"

[node name="Material" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("7_idvsx")]
layout_mode = 2
icon = 40
amount = 123
burn_val = "0000"

[node name="Core" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("7_idvsx")]
layout_mode = 2
icon = 39
amount = 123
burn_val = "0000"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = -3
theme_override_constants/margin_bottom = -30

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="CurrencyTag" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2" instance=ExtResource("8_iuvjp")]
modulate = Color(1, 1, 1, 1)
layout_mode = 2
val = 1

[node name="ScienceTag" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2" instance=ExtResource("8_iuvjp")]
modulate = Color(1, 1, 1, 1)
layout_mode = 2
val = 1

[node name="MaterialTag" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2" instance=ExtResource("8_iuvjp")]
modulate = Color(1, 1, 1, 1)
layout_mode = 2
val = 1

[node name="CoreTag" parent="MarginContainer/VBoxContainer/VBoxContainer/Currencies/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2" instance=ExtResource("8_iuvjp")]
modulate = Color(1, 1, 1, 1)
layout_mode = 2
val = 1
